# ai-arch-commons

./: .gitignore  pyproject.toml  requirements.txt
ai_arch_commons/base_class/: base_ai_service.py  base_handler.py
ai_arch_commons/lib/ai_app_lib/: ai_app_class.py
ai_arch_commons/lib/watchdog_lib/: watchdog_class.py
ai_arch_commons/lib/webservice_lib/: webservice_class.py
ai_arch_commons/lib/webservice_lib/core/: event_handlers.py  ldap_search.py  security.py
ai_arch_commons/lib/webservice_lib/router/: heartbeat.py
ai_arch_commons/log_management/: config.py  log_management.py
devops/: application.yaml  configuration-develop.yaml  configuration-feature.yaml  configuration-release.yaml  configuration.yaml
test/ai_arch_commons/lib/ai_app_lib/: test_ai_app_lib.py
test/ai_arch_commons/lib/watchdog_lib/: test_watchdog_lib.py
test/ai_arch_commons/lib/webservice_lib/: webservice_lib_test.py
test/ai_arch_commons/lib/webservice_lib/core/: test_event_handlers.py  test_ldap_search.py  test_security.py
test/ai_arch_commons/lib/webservice_lib/end_to_end_test/: conftest.py  health_endpoint.py
test/ai_arch_commons/lib/webservice_lib/router/: test_heartbeat.py
