
[project]
name = "ai-arch-commons"
version = "0.0.3"
requires-python = ">=3.10"

dependencies = [
    "anyio==3.7.0",
    "click==8.1.3",
    "exceptiongroup==1.1.1",
    "fastapi==0.111.0",
    "h11==0.14.0",
    "idna==3.4",
    "ldap3==2.9.1",
    "pyasn1==0.5.0",
    "pydantic==1.10.9",
    "PyYAML==6.0",
    "sniffio==1.3.0",
    "starlette>=0.37.2",
    "httpcore==0.17.3",
    "httpx==0.24.1",
    "typing-extensions>=4.8.0",
    "uvicorn==0.22.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
